linking issue image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     var loader = new THREE.TextureLoader();
     loader.load(
       // resource URL
-      '/images/images.jpeg',
+      'images/images.jpeg',
       // Function when resource is loaded
       function ( texture ) {
       // do something with the texture
